# BICprototype

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh
DRsim/: CMakeLists.txt  DRsim.cc  run_ele.mac
DRsim/include/: DRsimCellParameterisation.hh  DRsimDetectorConstruction.hh  DRsimFilterParameterisation.hh  DRsimPrimaryGeneratorAction.hh  DRsimRunAction.hh  DRsimSiPMHit.hh  DRsimSiPMSD.hh  DRsimSteppingAction.hh  dimensionCalc.hh
DRsim/src/: DRsimCellParameterisation.cc  DRsimDetectorConstruction.cc  DRsimDetectorConstruction.cc.backup  DRsimEventAction.cc  DRsimFilterParameterisation.cc  DRsimMaterials.cc  DRsimMirrorParameterisation.cc  DRsimPrimaryGeneratorAction.cc  DRsimRunAction.cc  DRsimSiPMHit.cc  DRsimSiPMSD.cc  DRsimSteppingAction.cc  dimensionCalc.cc
analysis/: CMakeLists.txt  analysis.cc  analysis_full.cc  analysis_original.cc
analysis/include/: functions.h
analysis/src/: functions.cc
rootIO/: CMakeLists.txt
rootIO/include/: DRsimInterface.h  LinkDef.h
rootIO/src/: RootInterface.cc
